--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
+    <body>
+        <h1>Odin Recipes</h1>
+        <a href="./recipes/tibs.html" target="_blank" rel="noopener noreferrer">Tibs Recipe</a>
+    </body>
 </html>
