Create new html kitfo.html Add image, description, ingredients and steps for recipe on kitfo.html Link kitfo.html on index.html Correct Niter Kibbeh ingredient on tibs.html

--- a/recipes/tibs.html
+++ b/recipes/tibs.html
@@ -8,7 +8,8 @@
         <h1>Tibs Recipe</h1>
         <img src="./tibs.jpg" length="350" width="350" alt="a picture of a tibs dish">
         <h2>Description</h2>
-        <p>Ethiopian Tibs is a popular East African dish of beef cooked 
+        <p>
+            Ethiopian Tibs is a popular East African dish of beef cooked 
             with various ingredients that combine to create a fragrant, 
             delicious dish. In Ethiopia, tibs refer to a dish with cubed 
             or sliced beef or lamb.
@@ -20,7 +21,7 @@
             <li>Onions</li>
             <li>Black Pepper</li>
             <li>Jalapeno Peppers</li>
-            <li>Niter Kibbeh (Traditional Butter)</li>
+            <li>Niter Kibbeh (Traditional Clarified Butter)</li>
             <li>Garlic</li>
             <li>Lemons</li>
             <li>Berbere Spice</li>
