--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/tibs.html" target="_blank" rel="noopener noreferrer">Tibs Recipe</a>
+        <ul>
+            <li><a href="./recipes/tibs.html" target="_blank" rel="noopener noreferrer">Tibs Recipe</a></li>
+            <li><a href="./recipes/kitfo.html" target="_blank" rel="noopener noreferrer">Kitfo Recipe</a></li>
+        </ul>
     </body>
 </html>
