Add "about" to index.html The about describes the homepage and the recipes it contains
Create new html file kategna.html
Add image, description, ingredients and steps for recipe on kategna.html
Link kategna.html on index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <h2>About</h2>
+        <p>
+            This website contains the recipes to three of my favorite
+            Ethiopian dishes: Tibs, Kitfo, and Kategna. The first two
+            are meat-based while the last one is made from injera, a 
+            traditional sour flatbread from Ethiopia. I copied the 
+            recipes from other websites, but I hope whoever comes across
+            my website can prepare and enjoy these great dishes!
+        </p>
         <ul>
-            <li><a href="./recipes/tibs.html" target="_blank" rel="noopener noreferrer">Tibs Recipe</a></li>
-            <li><a href="./recipes/kitfo.html" target="_blank" rel="noopener noreferrer">Kitfo Recipe</a></li>
+            <li>
+                <a href="./recipes/tibs.html" target="_blank" rel="noopener noreferrer">Tibs Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/kitfo.html" target="_blank" rel="noopener noreferrer">Kitfo Recipe</a>
+            </li>
+            <li>
+                <a href="./recipes/kategna.html" target="_blank" rel="noopener noreferrer">Kategna Recipe</a>
+            </li>
         </ul>
     </body>
 </html>
