Add link to styles.css stylesheet

--- a/recipes/kategna.html
+++ b/recipes/kategna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Kategna Recipe</title>
+        <link href="./styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Kategna Recipe</h1>
@@ -62,6 +63,6 @@
                 Regardless of how you choose to present it, the warm, 
                 spicy, and buttery Kategna offers the same exquisite taste.
             </li>
-        </ol>
+        </ol>   
     </body>
 </html>
