--- a/recipes/kitfo.html
+++ b/recipes/kitfo.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Kitfo Recipe</title>
+        <link href="./styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Kitfo Recipe</h1>
