--- a/recipes/tibs.html
+++ b/recipes/tibs.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Tibs Recipe</title>
+        <link href="./styles.css" rel="stylesheet">
     </head>
     <body>
         <h1>Tibs Recipe</h1>
