Change recipes list to divs

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
             recipes from other websites, but I hope whoever comes across
             my website can prepare and enjoy these great dishes!
         </p>
-        <ul>
-            <li>
+            <div>
                 <a href="./recipes/tibs.html" target="_blank" rel="noopener noreferrer">Tibs Recipe</a>
-            </li>
-            <li>
+            </div>
+            <div>
                 <a href="./recipes/kitfo.html" target="_blank" rel="noopener noreferrer">Kitfo Recipe</a>
-            </li>
-            <li>
+            </div>
+            <div>
                 <a href="./recipes/kategna.html" target="_blank" rel="noopener noreferrer">Kategna Recipe</a>
-            </li>
-        </ul>
+            </div>
     </body>
 </html>
