--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./indexstyles.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
@@ -22,7 +23,7 @@
                 <a href="./recipes/kitfo.html" target="_blank" rel="noopener noreferrer">Kitfo Recipe</a>
             </div>
             <div>
-                <a href="./recipes/kategna.html" target="_blank" rel="noopener noreferrer">Kategna Recipe</a>
+                <a href="./recipes/kategna.html" target="_blank" rel="noopener noreferrer">Recipe</a>
             </div>
     </body>
 </html>
